--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arka Garai - Portfolio</title>
+    <title>Arka's Portfolio</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <link rel="stylesheet" href="https://www.cdn.jsdelivr.net/gh/ryanoasis/nerd-fonts@3.0.2/css/jetbrains-mono.min.css">
     <style>
