--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Arka Garai - Computer Engineering Student specializing in full-stack development, machine learning, and web applications">
     <meta name="theme-color" content="#A384FF">
-    <title>Arka Garai | Portfolio</title>
+    <title>Arka's Portfolio</title>
     
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://cdn.jsdelivr.net">
